src/01/Programmer/Programmer.h

extern "C" PROGRAMMER_API int GetExternalLoaders(const char* path, externalStorageInfo** externalStorageNfo);
extern "C" PROGRAMMER_API void RemoveExternalLoader(const char* path);
extern "C" PROGRAMMER_API void DeleteLoaders();
/* -------------------------------------------------------------------------------------------- */
/*                             STM32WB specific functions                                       */
/* -------------------------------------------------------------------------------------------- */

extern "C" PROGRAMMER_API int GetUID64(unsigned char** data);
extern "C" PROGRAMMER_API int FirmwareDelete();
extern "C" PROGRAMMER_API int FirmwareUpgrade(const wchar_t* filePath, unsigned int address, unsigned int firstInstall, unsigned int startStack, unsigned int verify);
extern "C" PROGRAMMER_API int StartWirelessStack();
extern "C" PROGRAMMER_API int UpdateAuthKey(const wchar_t* filePath);
extern "C" PROGRAMMER_API int AuthKeyLock();
extern "C" PROGRAMMER_API int WriteUserKey(const wchar_t* filePath, unsigned char keyType);
extern "C" PROGRAMMER_API int AntiRollBack();
extern "C" PROGRAMMER_API int StartFus();
extern "C" PROGRAMMER_API int UnlockChip();
/* -------------------------------------------------------------------------------------------- */
/*                             STM32MP specific functions                                       */
/* -------------------------------------------------------------------------------------------- */

extern "C" PROGRAMMER_API int ProgramSsp(const wchar_t* sspFile, const wchar_t* licenseFile, const wchar_t* tfaFile, int hsmSlotId);
/* -------------------------------------------------------------------------------------------- */
/*                             STM32 HSM specific functions                                     */
/* -------------------------------------------------------------------------------------------- */

extern "C" PROGRAMMER_API const char* GetHsmFirmwareID(int hsmSlotId);
extern "C" PROGRAMMER_API unsigned long GetHsmCounter(int hsmSlotId);
extern "C" PROGRAMMER_API const char* GetHsmState(int hsmSlotId);
extern "C" PROGRAMMER_API const char* GetHsmVersion(int hsmSlotId);
extern "C" PROGRAMMER_API const char* GetHsmType(int hsmSlotId);
extern "C" PROGRAMMER_API int GetHsmLicense(int hsmSlotId, const wchar_t* outLicensePath);