src/01/Programmer/ProgrammerExtended.h

extern "C" PROGRAMMER_API_EXTENDED void CpuHalt();
extern "C" PROGRAMMER_API_EXTENDED void CpuRun();
extern "C" PROGRAMMER_API_EXTENDED void CpuStep();